--- a/Readings/Survey.org
+++ b/Readings/Survey.org
@@ -38,6 +38,17 @@
    :CITE:     Yes
    :END:    
 
+** TODO [[https://doi.org/10.1007/978-3-030-49829-0][Mei, Chen and Wei - Multi-path Combination Analysisof Economic Development:Based on the Fuzzy SetComparison of Multinational Data]] :EconomicDevelopment:ignore:
+   :PROPERTIES:
+   :ZOTERO: Yes
+   :YEAR: 2020
+   :TYPE: Case
+   :STATUS: Skimmed
+   :RELEVANCE: Low
+   :IMPACT: Low
+   :DECISION: Read
+   :CITE: Wait
+   :END:    
 ** TODO [[http://faculty.marshall.usc.edu/Peer-Fiss/5_Furnari_2019_Longitudinal_QCA_AOM_PDW2019.pdf][Furnari - Three Approaches to Longitudinal QCA: Opportunities and Challenges]] :TimeSeries:ignore:
    :PROPERTIES:
    :ZOTERO: No
@@ -128,6 +139,18 @@
    :CITE: Yes
    :END:   
 *Zotero File name:* 15218.pdf
+** [[http://www.compasss.org/wpseries/CooperGlaesserThomson2014.pdf][Schneider and Wagemann's proposed Enhanced Standard Analysis for Ragin's Qualitative Comparative Analysis: Some unresolved problems and some suggestions for addressing them]] :Estimation:ignore:
+   :PROPERTIES:
+   :ZOTERO: Partial
+   :YEAR: 2014
+   :TYPE: Theory
+   :STATUS: Downloaded
+   :RELEVANCE: Low
+   :IMPACT: Low
+   :DECISION: Skim
+   :CITE: Wait
+   :END:    
+
 ** TODO [[https://www.jstor.org/stable/23563601][Emmenegger, Kvist and Skaaning - Making the most of configurational comparative analysis: An assessment of QCA applications in comparative welfare-state research]] :Review:ignore:
    :PROPERTIES:
    :ZOTERO:   Yes
@@ -199,6 +222,17 @@
    :CITE:
    :END:    
 
+** TODO [[https://doi.org/10.1179/rea.12.2.p663527490513071][Gerrits and Verweij - Critical Realism as a Meta-Framework for Understanding the Relationships between Complexity and Qualitative Comparative Analysis]] :Complexity:ignore:
+   :PROPERTIES:
+   :ZOTERO: Entry
+   :YEAR: 2013
+   :TYPE: Theory
+   :STATUS: Skimmed
+   :RELEVANCE: Low
+   :IMPACT: Low
+   :DECISION: File
+   :CITE: No
+   :END:    
 ** TODO [[https://doi.org/10.1177/1525822X11433998][Basurto and Speer - Structuring the calibration of qualitative data as sets for Qualitative Comparative Analysis (QCA)]] :BestPractices:ignore:
    :PROPERTIES:
    :ZOTERO:   Yes
@@ -460,6 +494,8 @@
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Techinical | TODO | [[https://doi.org/10.1177/0049124117701487][Baumgartner and Thiem - Often trusted but never (properly) tested: Evaluating Qualitative Comparative Analysis]]                                                                                                 | 2020 | Read        | Yes     | Skimmed     | High      | High     | Yes  | :Estimation:ignore:                 |
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
+| Case       | TODO | [[https://doi.org/10.1007/978-3-030-49829-0][Mei, Chen and Wei - Multi-path Combination Analysisof Economic Development:Based on the Fuzzy SetComparison of Multinational Data]]                                                                              | 2020 | Read        | Yes     | Skimmed     | Low       | Low      | Wait | :EconomicDevelopment:ignore:        |
+|------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Technical  | TODO | [[http://faculty.marshall.usc.edu/Peer-Fiss/5_Furnari_2019_Longitudinal_QCA_AOM_PDW2019.pdf][Furnari - Three Approaches to Longitudinal QCA: Opportunities and Challenges]]                                                                                                                                   | 2019 | Read        | No      | Researching | High      | Low      | No   | :TimeSeries:ignore:                 |
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Manual     | TODO | [[https://stefanverweij.eu/wp-content/uploads/2018/09/2018-Edward-Elgar-Gerrits-Verweij.pdf][Gerrits and Verweij - The evaluation of complex infrastructure projects]]                                                                                                                                        | 2018 | Read        | Yes     | Downloaded  | Regular   | High     | Wait | :ignore:BestPractices:              |
@@ -476,6 +512,8 @@
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Techinical |      | [[http://dro.dur.ac.uk/15218/1/15218.pdf?DDD29+ded4ss+ded0bc+d700tmt][Cooper, Glaesser and S. Thomson - Schneider and Wagemann’s proposed enhanced standard analysis for Ragin’s qualitative comparative analysis: Some unresolved problems and some suggestions for addressing them]] | 2014 | Skim        | Partial | Skimmed     | High      | Regular  | Yes  | :LimitedDiversity:ignore:noexport:  |
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
+| Theory     |      | [[http://www.compasss.org/wpseries/CooperGlaesserThomson2014.pdf][Schneider and Wagemann's proposed Enhanced Standard Analysis for Ragin's Qualitative Comparative Analysis: Some unresolved problems and some suggestions for addressing them]]                                   | 2014 | Skim        | Partial | Downloaded  | Low       | Low      | Wait | :Estimation:ignore:                 |
+|------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Thechnical | TODO | [[https://www.jstor.org/stable/23563601][Emmenegger, Kvist and Skaaning - Making the most of configurational comparative analysis: An assessment of QCA applications in comparative welfare-state research]]                                              | 2013 | Read        | Yes     | Skimmed     | High      | High     | Yes  | :Review:ignore:                     |
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Case       | TODO | [[https://pdfs.semanticscholar.org/7624/660320e7a032012245a4bbd20dd3397e77bd.pdf][Marx, Rihoux and Ragin - The origins, development, and application of Qualitative Comparative Analysis The first 25 years]]                                                                                      | 2013 | Read        | Yes     | Skimmed     | High      | Regular  | Yes  | :Survey:ignore:                     |
@@ -487,6 +525,8 @@
 | Theory     |      | [[https://doi.org/10.1179/rea.12.2.p663527490513071][Gerrits, and Verweij - Critical realism as a meta-framework for understanding the relationships between complexity and qualitative comparative analysis]]                                                        | 2013 | Skim        | Entry   | Filed       | Low       | Regular  | Yes  | :Complexity:ignore:                 |
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Technical  |      | [[https://www.researchgate.net/publication/304578652_The_analysis_of_temporally_ordered_configurations_Challenges_and_solutions][Hak, Jaspers, and Dul - The analysis of temporally ordered configurations: Challenges and solutions]]                                                                                                            | 2013 |             |         | NotFound    |           |          |      | :ignore:TimeSeries:                 |
+|------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
+| Theory     | TODO | [[https://doi.org/10.1179/rea.12.2.p663527490513071][Gerrits and Verweij - Critical Realism as a Meta-Framework for Understanding the Relationships between Complexity and Qualitative Comparative Analysis]]                                                         | 2013 | File        | Entry   | Skimmed     | Low       | Low      | No   | :Complexity:ignore:                 |
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
 | Manual     | TODO | [[https://doi.org/10.1177/1525822X11433998][Basurto and Speer - Structuring the calibration of qualitative data as sets for Qualitative Comparative Analysis (QCA)]]                                                                                         | 2012 | Read        | Yes     | Skimmed     | Regular   | High     | Wait | :BestPractices:ignore:              |
 |------------+------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------+-------------+---------+-------------+-----------+----------+------+-------------------------------------|
