Encerrado levantamento bibliográfico QCA

--- a/Readings/QCA.bib
+++ b/Readings/QCA.bib
@@ -1,12 +1,451 @@
-@article{lili_dynamic_2020,
-	title = {On {Dynamic} {Mechanism} of {Chinese} {Individual} {Champions}’ {Business} {Model} {Innovation}—{A} {Fuzzy} {Set} {Qualitative} {Comparative} {Analysis} ({fsQCA})},
-	volume = {4},
-	abstract = {The core competitive advantages of manufacturing Individual Champions are formed by the continuous business model innovation, which provides an enlightening new idea for cultivating more "specialized and innovative" Individual Champion. Based on the theoretical framework of TOE (technology - organization - environment), the paper explores the dynamic mechanism of 81 listed Individual Champions’ business model innovation by using the fuzzy-set Qualitative Comparative Analysis (fsQCA) method. The result shows that: Individual Champion’ s business model innovation can be attributed to technology-oriented, market-oriented and technology-market-oriented, and Marketoriented business model innovation covers the most enterprises. R\&D investment at the technical level and social networks at the organizational level play an important role in business model innovation. In technology-oriented business model innovation, there is a substitution relationship between technology introduction and R\&D investment. The conclusion of this paper can provide theoretical reference and practical enlightenment for manufacturing enterprises to select and cultivate the driving force of business model innovation.},
-	number = {7},
-	author = {Lili, Yang and Li, Hua and Jia, Xinlong},
-	year = {2020},
-	pages = {5},
-	file = {Li - On Dynamic Mechanism of Chinese Individual Champio.pdf:/home/gpetrini/Zotero/storage/8UPEMVA6/Li - On Dynamic Mechanism of Chinese Individual Champio.pdf:application/pdf}
+@Article{AMENTA_1994,
+  author =	 {AMENTA, EDWIN and POULSEN, JANE D.},
+  title =	 {Where to Begin},
+  year =	 1994,
+  volume =	 23,
+  number =	 1,
+  month =	 {Aug},
+  pages =	 {22–53},
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124194023001002},
+  url =		 {http://dx.doi.org/10.1177/0049124194023001002},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
 }
 
-cp QCA.bibtex QCA.bib
+@Article{Arel_Bundock_2019,
+  author =	 {Arel-Bundock, Vincent},
+  title =	 {The Double Bind of Qualitative Comparative Analysis},
+  year =	 2019,
+  month =	 {Nov},
+  pages =	 004912411988246,
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124119882460},
+  url =		 {http://dx.doi.org/10.1177/0049124119882460},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Basurto_2012,
+  author =	 {Basurto, Xavier and Speer, Johanna},
+  title =	 {Structuring the Calibration of Qualitative Data as
+                  Sets for Qualitative Comparative Analysis (QCA)},
+  year =	 2012,
+  volume =	 24,
+  number =	 2,
+  month =	 {Apr},
+  pages =	 {155–174},
+  issn =	 {1552-3969},
+  doi =		 {10.1177/1525822x11433998},
+  url =		 {http://dx.doi.org/10.1177/1525822X11433998},
+  journal =	 {Field Methods},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Baumgartner_2015,
+  author =	 {Baumgartner, Michael and Thiem, Alrik},
+  title =	 {Model Ambiguities in Configurational Comparative
+                  Research},
+  year =	 2015,
+  volume =	 46,
+  number =	 4,
+  month =	 {Oct},
+  pages =	 {954–987},
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124115610351},
+  url =		 {http://dx.doi.org/10.1177/0049124115610351},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Baumgartner_2017,
+  author =	 {Baumgartner, Michael and Thiem, Alrik},
+  title =	 {Often Trusted but Never (Properly) Tested:
+                  Evaluating Qualitative Comparative Analysis},
+  year =	 2017,
+  volume =	 49,
+  number =	 2,
+  month =	 {May},
+  pages =	 {279–311},
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124117701487},
+  url =		 {http://dx.doi.org/10.1177/0049124117701487},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Caren_2005,
+  author =	 {Caren, Neal and Panofsky, Aaron},
+  title =	 {TQCA},
+  year =	 2005,
+  volume =	 34,
+  number =	 2,
+  month =	 {Nov},
+  pages =	 {147–172},
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124105277197},
+  url =		 {http://dx.doi.org/10.1177/0049124105277197},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Cioffi_Revilla_1981,
+  author =	 {Cioffi-Revilla, Claudio A.},
+  title =	 {Fuzzy Sets and Models of International Relations},
+  year =	 1981,
+  volume =	 25,
+  number =	 1,
+  month =	 {Feb},
+  pages =	 129,
+  issn =	 {0092-5853},
+  doi =		 {10.2307/2110917},
+  url =		 {http://dx.doi.org/10.2307/2110917},
+  journal =	 {American Journal of Political Science},
+  publisher =	 {JSTOR}
+}
+
+@Article{Du_a_2019,
+  author =	 {Dușa, Adrian},
+  title =	 {Critical Tension: Sufficiency and Parsimony in QCA},
+  year =	 2019,
+  month =	 {Nov},
+  pages =	 004912411988245,
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124119882456},
+  url =		 {http://dx.doi.org/10.1177/0049124119882456},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Eliason_2009,
+  author =	 {Eliason, Scott R. and Stryker, Robin},
+  title =	 {Goodness-of-Fit Tests and Descriptive Measures in
+                  Fuzzy-Set Analysis},
+  year =	 2009,
+  volume =	 38,
+  number =	 1,
+  month =	 {Aug},
+  pages =	 {102–146},
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124109339371},
+  url =		 {http://dx.doi.org/10.1177/0049124109339371},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Greckhamer_2013,
+  author =	 {Greckhamer, Thomas and Misangyi, Vilmos F. and Fiss,
+                  Peer C.},
+  title =	 {The Two QCAs: From a Small-N to a Large-N Set
+                  Theoretic Approach},
+  year =	 2013,
+  month =	 {Jan},
+  pages =	 {49–75},
+  issn =	 {0733-558X},
+  doi =		 {10.1108/s0733-558x(2013)0000038007},
+  url =
+                  {http://dx.doi.org/10.1108/S0733-558X(2013)0000038007},
+  isbn =	 9781781907795,
+  journal =	 {Configurational Theory and Methods in Organizational
+                  Research},
+  publisher =	 {Emerald Group Publishing Limited}
+}
+
+@Article{Haesebrouck_2019,
+  author =	 {Haesebrouck, Tim},
+  title =	 {An alternative update of the two-step QCA procedure},
+  year =	 2019,
+  volume =	 53,
+  number =	 6,
+  month =	 {May},
+  pages =	 {2765–2780},
+  issn =	 {1573-7845},
+  doi =		 {10.1007/s11135-019-00893-7},
+  url =		 {http://dx.doi.org/10.1007/s11135-019-00893-7},
+  journal =	 {Quality & Quantity},
+  publisher =	 {Springer Science and Business Media LLC}
+}
+
+@Article{Krogslund_2015,
+  author =	 {Krogslund, Chris and Choi, Donghyun Danny and
+                  Poertner, Mathias},
+  title =	 {Fuzzy Sets on Shaky Ground: Parameter Sensitivity
+                  and Confirmation Bias in fsQCA},
+  year =	 2015,
+  volume =	 23,
+  number =	 1,
+  pages =	 {21–41},
+  issn =	 {1476-4989},
+  doi =		 {10.1093/pan/mpu016},
+  url =		 {http://dx.doi.org/10.1093/pan/mpu016},
+  journal =	 {Political Analysis},
+  publisher =	 {Cambridge University Press (CUP)}
+}
+
+@Article{Mendel_2018,
+  author =	 {Mendel, Jerry M. and Korjani, Mohammad M.},
+  title =	 {A new method for calibrating the fuzzy sets used in
+                  fsQCA},
+  year =	 2018,
+  volume =	 468,
+  month =	 {Nov},
+  pages =	 {155–171},
+  issn =	 {0020-0255},
+  doi =		 {10.1016/j.ins.2018.07.050},
+  url =		 {http://dx.doi.org/10.1016/j.ins.2018.07.050},
+  journal =	 {Information Sciences},
+  publisher =	 {Elsevier BV}
+}
+
+@Article{Radaelli_2018,
+  author =	 {Radaelli, Claudio M. and Wagemann, Claudius},
+  title =	 {What did I leave out? Omitted variables in
+                  regression and qualitative comparative analysis},
+  year =	 2018,
+  volume =	 18,
+  number =	 2,
+  month =	 {Jan},
+  pages =	 {275–290},
+  issn =	 {1682-0983},
+  doi =		 {10.1057/s41304-017-0142-7},
+  url =		 {http://dx.doi.org/10.1057/s41304-017-0142-7},
+  journal =	 {European Political Science},
+  publisher =	 {Springer Science and Business Media LLC}
+}
+
+@Article{Ragin,
+  author =	 {Ragin, Charles C.},
+  title =	 {Qualitative Comparative Analysis using Fuzzy Sets
+                  (fsQCA)},
+  pages =	 {87–122},
+  doi =		 {10.4135/9781452226569.n5},
+  url =		 {http://dx.doi.org/10.4135/9781452226569.n5},
+  isbn =	 9781452226569,
+  journal =	 {Configurational Comparative Methods: Qualitative
+                  Comparative Analysis (QCA) and Related Techniques},
+  publisher =	 {SAGE Publications, Inc.}
+}
+
+@Article{Rubinson_2012,
+  author =	 {Rubinson, Claude},
+  title =	 {Contradictions in fsQCA},
+  year =	 2012,
+  volume =	 47,
+  number =	 5,
+  month =	 {Mar},
+  pages =	 {2847–2867},
+  issn =	 {1573-7845},
+  doi =		 {10.1007/s11135-012-9694-3},
+  url =		 {http://dx.doi.org/10.1007/s11135-012-9694-3},
+  journal =	 {Quality & Quantity},
+  publisher =	 {Springer Science and Business Media LLC}
+}
+
+@Article{Rutten_2020,
+  author =	 {Rutten, Roel},
+  title =	 {Applying and Assessing Large-N QCA: Causality and
+                  Robustness From a Critical Realist Perspective},
+  year =	 2020,
+  month =	 {Apr},
+  pages =	 004912412091495,
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124120914955},
+  url =		 {http://dx.doi.org/10.1177/0049124120914955},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Skaaning_2011,
+  author =	 {Skaaning, Svend-Erik},
+  title =	 {Assessing the Robustness of Crisp-set and Fuzzy-set
+                  QCA Results},
+  year =	 2011,
+  volume =	 40,
+  number =	 2,
+  month =	 {Apr},
+  pages =	 {391–408},
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124111404818},
+  url =		 {http://dx.doi.org/10.1177/0049124111404818},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{T_th_2017,
+  author =	 {Tóth, Zsófia and Henneberg, Stephan C. and Naudé,
+                  Peter},
+  title =	 {Addressing the “Qualitative” in fuzzy set
+                  Qualitative Comparative Analysis: The Generic
+                  Membership Evaluation Template},
+  year =	 2017,
+  volume =	 63,
+  month =	 {May},
+  pages =	 {192–204},
+  issn =	 {0019-8501},
+  doi =		 {10.1016/j.indmarman.2016.10.008},
+  url =		 {http://dx.doi.org/10.1016/j.indmarman.2016.10.008},
+  journal =	 {Industrial Marketing Management},
+  publisher =	 {Elsevier BV}
+}
+
+@Article{Thiem_2013,
+  author =	 {Thiem, Alrik},
+  title =	 {Membership function sensitivity of descriptive
+                  statistics in fuzzy-set relations},
+  year =	 2013,
+  volume =	 17,
+  number =	 6,
+  month =	 {Jun},
+  pages =	 {625–642},
+  issn =	 {1464-5300},
+  doi =		 {10.1080/13645579.2013.806118},
+  url =		 {http://dx.doi.org/10.1080/13645579.2013.806118},
+  journal =	 {International Journal of Social Research
+                  Methodology},
+  publisher =	 {Informa UK Limited}
+}
+
+@Article{Thiem_2016,
+  author =	 {Thiem, Alrik},
+  title =	 {Conducting Configurational Comparative Research With
+                  Qualitative Comparative Analysis},
+  year =	 2016,
+  volume =	 38,
+  number =	 3,
+  month =	 {Nov},
+  pages =	 {420–433},
+  issn =	 {1557-0878},
+  doi =		 {10.1177/1098214016673902},
+  url =		 {http://dx.doi.org/10.1177/1098214016673902},
+  journal =	 {American Journal of Evaluation},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Thiem_2019,
+  author =	 {Thiem, Alrik},
+  title =	 {Beyond the Facts: Limited Empirical Diversity and
+                  Causal Inference in Qualitative Comparative
+                  Analysis},
+  year =	 2019,
+  month =	 {Nov},
+  pages =	 004912411988246,
+  issn =	 {1552-8294},
+  doi =		 {10.1177/0049124119882463},
+  url =		 {http://dx.doi.org/10.1177/0049124119882463},
+  journal =	 {Sociological Methods & Research},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Thiem_2020,
+  author =	 {Thiem, Alrik and Mkrtchyan, Lusine and Haesebrouck,
+                  Tim and Sanchez, David},
+  title =	 {Algorithmic bias in social research: A
+                  meta-analysis},
+  year =	 2020,
+  editor =	 {Meloni, SandroEditor},
+  volume =	 15,
+  number =	 6,
+  month =	 {Jun},
+  pages =	 {e0233625},
+  issn =	 {1932-6203},
+  doi =		 {10.1371/journal.pone.0233625},
+  url =		 {http://dx.doi.org/10.1371/journal.pone.0233625},
+  journal =	 {PLOS ONE},
+  publisher =	 {Public Library of Science (PLoS)}
+}
+
+@Article{Thiem_Minimization_2013,
+  author =	 {Thiem, Alrik and Duşa, Adrian},
+  title =	 {Boolean Minimization in Social Science Research},
+  year =	 2013,
+  volume =	 31,
+  number =	 4,
+  month =	 {Mar},
+  pages =	 {505–521},
+  issn =	 {1552-8286},
+  doi =		 {10.1177/0894439313478999},
+  url =		 {http://dx.doi.org/10.1177/0894439313478999},
+  journal =	 {Social Science Computer Review},
+  publisher =	 {SAGE Publications}
+}
+
+@Article{Thiem_Sensitivity_2016,
+  author =	 {Thiem, Alrik and Spöhel, Reto and Duşa, Adrian},
+  title =	 {Enhancing Sensitivity Diagnostics for Qualitative
+                  Comparative Analysis: A Combinatorial Approach},
+  year =	 2016,
+  volume =	 24,
+  number =	 1,
+  pages =	 {104–120},
+  issn =	 {1476-4989},
+  doi =		 {10.1093/pan/mpv028},
+  url =		 {http://dx.doi.org/10.1093/pan/mpv028},
+  journal =	 {Political Analysis},
+  publisher =	 {Cambridge University Press (CUP)}
+}
+
+@Article{Thomson_2011,
+  author =	 {Thomson, Stephanie Louisa},
+  title =	 {The problem of limited diversity in qualitative
+                  comparative analysis: A discussion of two proposed
+                  solutions},
+  year =	 2011,
+  volume =	 5,
+  number =	 2,
+  month =	 {Oct},
+  pages =	 {254–268},
+  issn =	 {1834-0814},
+  doi =		 {10.5172/mra.2011.5.2.254},
+  url =		 {http://dx.doi.org/10.5172/mra.2011.5.2.254},
+  journal =	 {International Journal of Multiple Research
+                  Approaches},
+  publisher =	 {Dialectical Publishing}
+}
+
+@Article{Veri_2018,
+  author =	 {Veri, Francesco},
+  title =	 {Coverage in Fuzzy Set Qualitative Comparative
+                  Analysis (fsQCA): A New Fuzzy Proposition for
+                  Describing Empirical Relevance},
+  year =	 2018,
+  volume =	 17,
+  number =	 2,
+  month =	 {Apr},
+  pages =	 {133–158},
+  issn =	 {1569-1330},
+  doi =		 {10.1163/15691330-12341457},
+  url =		 {http://dx.doi.org/10.1163/15691330-12341457},
+  journal =	 {Comparative Sociology},
+  publisher =	 {Brill}
+}
+
+@Article{Veri_2019,
+  author =	 {Veri, Francesco},
+  title =	 {Aggregation Bias and Ambivalent Cases: A New
+                  Parameter of Consistency to Understand the
+                  Significance of Set-theoretic Sufficiency in fsQCA},
+  year =	 2019,
+  volume =	 18,
+  number =	 2,
+  month =	 {Apr},
+  pages =	 {229–255},
+  issn =	 {1569-1330},
+  doi =		 {10.1163/15691330-12341496},
+  url =		 {http://dx.doi.org/10.1163/15691330-12341496},
+  journal =	 {Comparative Sociology},
+  publisher =	 {Brill}
+}
+
+@Article{Zadeh_1996,
+  author =	 {Zadeh, Lotfi A.},
+  title =	 {FUZZY SETS},
+  year =	 1996,
+  month =	 {May},
+  pages =	 {394–432},
+  issn =	 {2010-2771},
+  doi =		 {10.1142/9789814261302_0021},
+  url =		 {http://dx.doi.org/10.1142/9789814261302_0021},
+  isbn =	 9789814261302,
+  journal =	 {Fuzzy Sets, Fuzzy Logic, and Fuzzy Systems},
+  publisher =	 {WORLD SCIENTIFIC}
+}
