--- a/Readings/QCA.tex
+++ b/Readings/QCA.tex
@@ -1,22 +1,35 @@
-% Created 2020-07-30 qui 11:35
+% Created 2020-09-18 sex 10:05
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
+\usepackage[top=3cm, bottom=2cm, left=3cm, right=2cm]{geometry}
 \usepackage{graphicx}
-\usepackage{grffile}
 \usepackage{longtable}
+\usepackage{float}
 \usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath}
 \usepackage{textcomp}
+\usepackage{marvosym}
+\usepackage{wasysym}
 \usepackage{amssymb}
-\usepackage{capt-of}
-\usepackage{hyperref}
-\usepackage[style=abnt,noslsn, extrayear, uniquename=init, giveninits,justify,sccite,	scbib, repeattitles, doi=false,isbn=false,url=false, maxcitenames=2, natbib=true,backend=biber]{biblatex}
+\usepackage{amsmath}
+\usepackage[theorems, skins]{tcolorbox}
+\usepackage[style=abnt,noslsn,extrayear,uniquename=init,giveninits,justify,sccite,
+scbib,repeattitles,doi=false,isbn=false,url=false,maxcitenames=2,
+natbib=true,backend=biber]{biblatex}
+\usepackage{url}
+\usepackage[cache=false]{minted}
+\usepackage[linktocpage,pdfstartview=FitH,colorlinks,
+linkcolor=blue,anchorcolor=blue,
+citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
+\usepackage{attachfile}
+\usepackage{setspace}
+\usepackage{tikz}
 \bibliography{QCA.bib}
-\usepackage[right=2cm, left=2cm, top=2cm, bottom=2cm]{geometry}
 \author{Gabriel Petrini}
 \date{\today}
 \title{Qualitative Comparative Analysis (QCA) readings}
@@ -26,24 +39,33 @@
 \tableofcontents
 
 
-\section{Case study\hfill{}\textsc{CaseStudy}}
-\label{sec:org5bfade9}
+\section{Manuals}
+\label{sec:org5b26a90}
 
-\subsection{\citeauthor{lili_dynamic_2020}: \citetitle{lili_dynamic_2020}}
-\label{sec:org97ff468}
+\section{Theoretical\hfill{}\textsc{Theoretical}}
+\label{sec:orgdfa2539}
+\section{Critiques}
+\label{sec:org3a83884}
+\section{Case study\hfill{}\textsc{CaseStudy}}
+\label{sec:orgb6dfa17}
+
+\subsection{\textcite{lili_dynamic_2020} - \citetitle{lili_dynamic_2020}\hfill{}\textsc{fsQCA:China}}
+\label{sec:org5ea251a}
 
 \begin{longtable}{l|p{.7\textwidth}}
 \hline
 \hline
 \textbf{Background} & \\
 \textbf{Supporting Ideas} & \\
-\textbf{Contribution} & \\
+\textbf{Purpose} & \\
+\textbf{Originality/value (Contribution)} & \\
 \textbf{Relevance} & \\
-\textbf{Methods} & \\
+\textbf{Design/methodology/approach} & \\
 \textbf{Results} & \\
-\textbf{Interesting Findings} & \\
-\textbf{Critics} & \\
-\textbf{Uncategorized stuff} & \\
+\textbf{(Interesting) Findings} & \\
+\textbf{Research limitations/implications (Critics)} & Maravilhoso\\
+\textbf{Uncategorized stuff} & Este deve ser assim\\
+\textbf{5SS} & Testando\\
  & \\
 \hline
 \endfirsthead
@@ -60,9 +82,24 @@
 \hline
 \end{longtable}
 
-\section{Theoretical\hfill{}\textsc{Theoretical}}
-\label{sec:orgcc3ffa3}
-\section*{References}
-\label{sec:org27541fd}
-\printbibliography[heading=none]
+
+\section*{Survey Table}
+\label{sec:org08ff259}
+\begin{center}
+\begin{tabular}{llllllll}
+TYPE & Decision & Title & YEAR & STATUS & RELEVANCE & IMPACT & CITE\\
+\hline
+ &  & HTML headers &  &  &  &  & \\
+ &  & Manuals &  &  &  &  & \\
+ &  & Theoretical &  &  &  &  & \\
+ &  & Critiques &  &  &  &  & \\
+ &  & Case study &  &  &  &  & \\
+ &  & \cite{lili_dynamic_2020}: \citetitle{lili_dynamic_2020} &  &  &  &  & \\
+ &  & Survey Table &  &  &  &  & \\
+\end{tabular}
+\end{center}
+
+
+\bibliographystyle{unsrt}
+\bibliography{QCA}
 \end{document}
